# LLamp

./: .gitignore  README.md  environment_stateact.yml  generate_games.py  playground_tw_gym.py  pyproject.toml  requirements.txt  requirements_local.txt  setup.py  test.csv  test2.csv  test3.csv  test_table.txt
archive/: requirements_textworld_vis.txt  setup.py
archive/playgrounds/: analysis_alfworld_eval.py  (+14 more)
llamp/: anthropic_agent.py  anthropic_text_agent.py  base_agent.py  base_llm_agent.py  basic_agent.py  cohere_agent.py  cohere_text_agent.py  cohere_text_chat_agent.py  cohere_text_chat_sampling.py  minichat_agent.py  mistral_orca_agent.py  openai_agent.py  openai_text_agent.py  openai_text_chat_agent.py  openai_text_chat_sampling_agent.py  orca2_agent.py  utils.py  yi_agent.py
playgrounds/: analysis_alfworld_eval.py  analysis_alfworld_eval_notebook.ipynb  common_utils.py  deepdive_alfworld_eval.py  exploration_alfworld_sampling.py  insights_alfworld.py  playground_alfworld.py  playground_alfworld_ablation_generator.py  playground_alfworld_auto_example_generator.py  playground_alfworld_eval.py  playground_alfworld_react_prompt_utils.py  playground_cohere.py  playground_gymnasium.py  playground_intel.py  playground_minichat.py  playground_mistral_orca.py  playground_openai.py  playground_tiktoken.py  playground_tw_gym.py  playground_zork1.py  run_alfworld_eval.sh  test.py  test_playground_alfworld_eval.py
results/: pandas_test_output.csv
tests/: requirements.txt  test_local_llm.py  test_manual.py
tw_games/: first_game.json  first_game.z8  w2_o10_l5_game.z8
(+42 files in other folders)
